--- a/client/src/components/main/slider/homeSlider.css
+++ b/client/src/components/main/slider/homeSlider.css
@@ -30,8 +30,8 @@
     top: 50%;
     transform: translateY(-50%);
     color: whitesmoke;
-    font-size: 2.8rem;
-    padding: 0 1.5rem;
+    font-size: 1.2rem;
+    padding: 0 0.8rem;
     opacity: 0.7;
     transition: all 0.4s;
 }
@@ -62,17 +62,55 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    opacity: 0;
 }
 
 .slider-text-content h1 {
+    font-size: 1.2rem;
+    font-weight: 800;
+    margin-bottom: 20px;
     color: white;
     text-transform: uppercase;
-    font-size: 3.2rem;
-    font-weight: 800;
-    margin-bottom: 60px;
 }
 
 .slider-text-content h2 {
     color: white;
-    font-size: 2.8rem;
+    font-size: 1rem;
+}
+
+@media (min-width: 576px) {
+    .slider-text-content h1 {
+        font-size: 1.8rem;
+        font-weight: 800;
+    }
+    .slider-text-content h2 {
+        color: white;
+        font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .slider-text-content h1 {
+        font-size: 2.4rem;
+        font-weight: 800;
+    }
+    .slider-text-content h2 {
+        color: white;
+        font-size: 1.6rem;
+    }
+    .home-slider button {
+        font-size: 2rem;
+        padding: 0 1.2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .slider-text-content h1 {
+        font-size: 3.2rem;
+        font-weight: 800;
+    }
+    .slider-text-content h2 {
+        color: white;
+        font-size: 2.8rem;
+    }
 }
